--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 asgiref==3.9.2
-Django==5.2.6
-djangorestframework==3.16.1
-djangorestframework_simplejwt==5.5.1
+Django>=4.2
+djangorestframework
+djangorestframework-simplejwt
+python-dotenv
+gunicorn
 PyJWT==2.10.1
-python-dotenv==1.1.1
 sqlparse==0.5.3
 tzdata==2025.2
 black==25.9.0
